--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,11 +9,12 @@
 
     <dimen name="text_label_tittle_size">@dimen/_13ssp</dimen>
     <dimen name="text_semi_label_tittle_size">@dimen/_11ssp</dimen>
-
+    <dimen name="text_semi_label_tittle_size1">@dimen/_15ssp</dimen>
     <dimen name="dashboard_panel_main_card_width">@dimen/_125sdp</dimen>
     <dimen name="dashboard_panel_main_card_height">@dimen/_155sdp</dimen>
     <dimen name="progress_bar_dimen">@dimen/_75sdp</dimen>
     <dimen name="top_banner_height">@dimen/_120sdp</dimen>
+    <dimen name="top_banner_height1">@dimen/_130sdp</dimen>
     <dimen name="banner_image_width">@dimen/_40sdp</dimen>
     <dimen name="banner_image_height">@dimen/_40sdp</dimen>
 
